feat: added map component with map and displayed map on the screen

--- a/src/HeaderLayout/HeaderLayout.css
+++ b/src/HeaderLayout/HeaderLayout.css
@@ -1,7 +1,9 @@
 .HeaderLayoutContainer {
+  position: relative;
   height: 828px;
   width: 375px;
   margin: auto;
+  z-index: 4;
 }
 
 .blueBackground {
