--- a/src/HeaderLayout/HeaderLayout.css
+++ b/src/HeaderLayout/HeaderLayout.css
@@ -115,6 +115,9 @@
   .desktopLine {
     display: none;
   }
+  .inputBoxDekstop {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
@@ -146,12 +149,10 @@
   }
 
   .inputBox {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    display: none;
+
     height: 58px;
     width: 555px;
-
     border-radius: 15px;
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 50px 50px -25px rgba(0, 0, 0, 0.0984);
@@ -184,6 +185,19 @@
     left: 497px;
     background: rgba(0, 0, 0, 1);
     border-radius: 0px 15px 15px 0px;
+  }
+
+  .inputBoxDekstop {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 58px;
+    width: 555px;
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0px 50px 50px -25px rgba(0, 0, 0, 0.0984);
+    margin: 29px auto;
+    z-index: 10;
   }
   .inputOfAddressDesktop {
     display: flex;
