--- a/src/HeaderLayout/map/map.css
+++ b/src/HeaderLayout/map/map.css
@@ -1,4 +1,11 @@
 .mapContainer {
-  margin-top: -50px;
+  margin-top: -185px;
   z-index: -1;
+}
+
+@media only screen and (min-width: 1440px) {
+  .mapContainer {
+    margin-top: -80px;
+    z-index: -1;
+  }
 }
